--- a/MediaLibrary/MediaLibrary.csproj
+++ b/MediaLibrary/MediaLibrary.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog.Config" Version="4.6.8" />
+  </ItemGroup>
+
 </Project>
